# SpicyGarden

./: .gitignore  Cargo.toml  README.md  build.rs
gather-server/: server.py
spigot-plugin/: .gitignore  SpicyGarden.java  compile.sh  plugin.yml
src/: main.rs  runner.rs  serverproperties.rs
src/runner/: serverproperties.rs
