[package]
name = "SpicyGarden"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
fs_extra = "1.2.0"
iced = { version = "0.4", default-features = false, features = ["glow"] }
iced_native = "0.5.1"